--- a/app/src/main/res/layout/layout_password2.xml
+++ b/app/src/main/res/layout/layout_password2.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/ln_layoutpass"
-              android:background="@drawable/background_lock"
+              android:background="#997088E4"
               android:weightSum="10">
     <RelativeLayout android:layout_width="match_parent" android:layout_height="0dp"
                     android:layout_weight="0.3"
@@ -196,7 +196,7 @@
                 android:id="@+id/tv_cancle_pass"
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
-                android:text="Cancel"
+                android:text="Cancle"
                 android:textColor="#FFFF"
                 android:layout_marginRight="50dp"
                 android:textSize="17sp"/>
