--- a/app/src/main/res/layout/lock_layout.xml
+++ b/app/src/main/res/layout/lock_layout.xml
@@ -22,15 +22,16 @@
                   android:id="@+id/ln_lock"
                   android:weightSum="10">
         <RelativeLayout android:background="#000" android:layout_width="match_parent" android:layout_height="0dp"
-                        android:layout_weight="0.4">
+                        android:layout_weight="0.3">
             <ImageView
+                    android:layout_marginLeft="-6dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/img_song" android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/icon_song"/>
 
             <TextView
-
+                    android:layout_marginLeft="-5dp"
                     android:id="@+id/tv_telecom"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/img_song"
@@ -49,6 +50,7 @@
                     android:layout_width="wrap_content" android:layout_height="wrap_content"
             />
             <ImageView
+                    android:layout_marginRight="-5dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/img_pin"
                     android:src="@drawable/icon_pin60"
@@ -58,18 +60,17 @@
         </RelativeLayout>
 
         <LinearLayout android:layout_width="match_parent" android:layout_height="0dp"
-                      android:layout_weight="7.6"
+                      android:layout_weight="7.7"
                       android:orientation="vertical">
 
 
-
-                <ImageView
-                        android:layout_gravity="center_horizontal"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="50dp"
-                        android:src="@drawable/a1"
-                        android:layout_height="50dp"/>
+            <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="50dp"
+                    android:src="@drawable/a1"
+                    android:layout_height="50dp"/>
 
             <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
@@ -87,8 +88,8 @@
                     android:id="@+id/tv_date"/>
 
             <RelativeLayout android:layout_width="match_parent"
-                          android:layout_height="match_parent"
-           >
+                            android:layout_height="match_parent"
+            >
                 <ImageView
 
                         android:src="@mipmap/ic_clear2"
@@ -127,6 +128,15 @@
                         android:src="@drawable/a2"
                         android:layout_height="50dp"/>
             </RelativeLayout>
+            <TextView
+                    android:id="@+id/tv_opencamera"
+                    android:visibility="invisible"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:textColor="#fff"
+                      android:layout_below="@id/rl_flash"
+                      android:layout_centerHorizontal="true"
+                      android:text="Unlock to Open Camera"
+            />
             <RelativeLayout
                     android:id="@+id/rl_camera"
                     android:layout_marginTop="10dp"
@@ -143,7 +153,9 @@
                         android:layout_height="50dp"/>
             </RelativeLayout>
 
-            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+            <TextView
+                    android:id="@+id/tv_open"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:layout_above="@+id/viewBottom"
                       android:layout_centerHorizontal="true"
                       android:text="Slide up to open"
